cluster/studentbee/api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: studentbee-api
    component: api
    part-of: beehive
    project: exam.login.no
    confidentiality: not-defined
    compliance: not-defined
  name: studentbee-api
  namespace: studentbee
spec:
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: studentbee-api
  template:
    metadata:
      labels:
        app: studentbee-api
        component: api
        part-of: beehive
        project: exam.login.no
        confidentiality: not-defined
        compliance: not-defined
    spec:
      imagePullSecrets:
        - name: gitlab-deploy-key-studentbee
      containers:
        - name: api
          image: registry.login.no/tekkom/web/beehive/exam.login.no/api:2.3.6@sha256:cdf2e7a8b5d4993a7d1b96f0dad9c98aeb194025190f725fccebf52fecc3b381
          imagePullPolicy: IfNotPresent
          command:
            - npm
            - start
          ports:
            - containerPort: 8080
              name: 8080tcp
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /api/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 10
          readinessProbe:
            httpGet:
              path: /api/
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
          resources:
            requests:
              memory: 256Mi
              cpu: 125m
            limits:
              memory: 1Gi
              cpu: 1000m
        - name: redis
          image: redis:7.4.1-alpine3.20@sha256:c1e88455c85225310bbea54816e9c3f4b5295815e6dbf80c34d40afc6df28275
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 6379
              name: 6379tcp
              protocol: TCP
          resources:
            requests:
              memory: 128Mi
              cpu: 125m
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - studentbee-api
                topologyKey: kubernetes.io/hostname
