cluster/studentbee/api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: studentbee-api
  namespace: studentbee
  labels:
    app: studentbee-api
spec:
  type: ClusterIP
  selector:
    app: studentbee-api
  ports:
    - protocol: TCP
      port: 8080
      targetPort: 8080
